src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>City where the event takes place.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country where the event takes place.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>(Estimated) Number of attendees at the event.</description>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponsoring_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization sponsoring the event. Looks up to the account object, so we must have organization information in Salesforce.</description>
        <label>Sponsoring Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsored Events</relationshipLabel>
        <relationshipName>Sponsored_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State where the event takes place.</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Topic of conversation or problem the gathering is addressing.</description>
        <label>Event Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near-shore Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_US_State_Name</fullName>
        <active>true</active>
        <description>If country equals US, United States, then the state abbreviation must be 2 letters. If country equals anything else, then state can be anything.</description>
        <errorConditionFormula>(Country__c = &quot;US&quot; || Country__c = &quot;United States&quot;) &amp;&amp;  LEN(State__c) != 2</errorConditionFormula>
        <errorMessage>The State field must be a 2-letter state abbreviation when choosing &quot;US&quot; or &quot;United States&quot; as the country.</errorMessage>
    </validationRules>
</CustomObject>